syntax = "proto3";
package Auction;

option go_package = "https://github.com/SadlifeCaw/MiniProject3";

service Auction {
  rpc Bid(BidRequest) returns (BidReply){};
  rpc Status(StatusRequest) returns (StatusReply){};
  rpc Finished(FinishMessage) returns (FinishReply){};
  rpc ExportInformation(InfoMessage) returns (EmptyReply){};
}

message StatusRequest {

}

message BidRequest {
  string bid = 1;
  string username = 2;
}

message StatusReply{
  string replyMessage = 1;
}

message BidReply{
  string replyMessage = 1;
}


message EmptyReply{
}